fix header spacing so it does not overlap title

--- a/web/main.css
+++ b/web/main.css
@@ -8,12 +8,12 @@ body {
 
 h1 {
   font-size: 2.5em;
-  margin: 0.3em 0;
+  margin: 0;
 }
 
 h2 {
   font-size: 2em;
-  margin: 0.3em 0;
+  margin: 0.3em 0 0 0;
 }
 
 h3 {
@@ -37,7 +37,7 @@ h3 {
   background-color: #0081C7;
   color: white;
   text-align: center;
-  padding: 25px;
+  padding: 15px;
 }
 
 .picture-frame {
@@ -159,14 +159,14 @@ img {
 .page-header {
   position: fixed;
   top: 0px;
-  height: 80px;
+  height: 68px;
   width: 100%;
   background-color: white;
   border-bottom-color: #0081C7;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   display: block;
-  padding: 1em 0;
+  padding: 16px 0;
 }
 
 .page-header .header-inside {
@@ -193,7 +193,7 @@ img {
 }
 
 .page-header img {
-  max-height: 5em;
+  max-height: 68px;
 }
 
 .menu ul {
